# rusty-ray-tracer

./: Cargo.toml  README.md
src/: main.rs  obj.rs  png.rs  vector.rs
src/old/: camera.rs  face.rs  main2.rs  matrix44.rs  ppm.rs  ray.rs  throw_away.rs  triangle.rs  vec3.rs
