[package]
name = "ray-tracing-in-one-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.12.1"
rayon = "1.10.0"
tobj = "4.0.2"
